<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.jakewharton.tronwallpaper"
	android:title="@string/title"
	android:key="TronWallpaper_Settings">
	
	<PreferenceCategory
		android:title="@string/settings_header">
		
		<!-- DISPLAY AND GAME -->
		<PreferenceScreen
			android:key="@string/settings_display_key"
			android:title="@string/settings_display"
			android:summary="@string/settings_display_summary">
			<CheckBoxPreference
				android:key="@string/settings_game_usercontrol_key"
				android:title="@string/settings_game_usercontrol"
				android:summary="@string/settings_game_usercontrol_summary"
				android:defaultValue="@bool/game_usercontrol_default"/>
			<com.jakewharton.utilities.NumberPreference
				android:key="@string/settings_display_fps_key"
				android:title="@string/settings_display_fps"
				android:summary="@string/settings_display_fps_summary"
				android:defaultValue="@integer/display_fps_default"
				app:min="@integer/display_fps_min"
				app:max="@integer/display_fps_max"/>
			<CheckBoxPreference
				android:key="@string/settings_display_showwalls_key"
				android:title="@string/settings_display_showwalls"
				android:summary="@string/settings_display_showwalls_summary"
				android:defaultValue="@bool/display_showwalls_default"/>
			<PreferenceCategory
				android:title="@string/settings_display_layout">
				<com.jakewharton.utilities.NumberPreference
					android:key="@string/settings_display_iconrows_key"
					android:title="@string/settings_display_iconrows"
					android:summary="@string/settings_display_iconrows_summary"
					android:defaultValue="@integer/display_iconrows_default"
					app:min="@integer/display_iconrows_min"
					app:max="@integer/display_iconrows_max"/>
				<com.jakewharton.utilities.NumberPreference
					android:key="@string/settings_display_iconcols_key"
					android:title="@string/settings_display_iconcols"
					android:summary="@string/settings_display_iconcols_summary"
					android:defaultValue="@integer/display_iconcols_default"
					app:min="@integer/display_iconcols_min"
					app:max="@integer/display_iconcols_max"/>
				<com.jakewharton.utilities.NumberPreference
					android:key="@string/settings_display_rowspacing_key"
					android:title="@string/settings_display_rowspacing"
					android:summary="@string/settings_display_rowspacing_summary"
					android:defaultValue="@integer/display_rowspacing_default"
					app:min="@integer/display_rowspacing_min"
					app:max="@integer/display_rowspacing_max"/>
				<com.jakewharton.utilities.NumberPreference
					android:key="@string/settings_display_colspacing_key"
					android:title="@string/settings_display_colspacing"
					android:summary="@string/settings_display_colspacing_summary"
					android:defaultValue="@integer/display_colspacing_default"
					app:min="@integer/display_colspacing_min"
					app:max="@integer/display_colspacing_max"/>
				<com.jakewharton.utilities.WidgetLocationsPreference
					android:key="@string/settings_display_widgetlocations_key"
					android:title="@string/settings_display_widgetlocations"
					android:summary="@string/settings_display_widgetlocations_summary"
					android:defaultValue="@string/display_widgetlocations_default"/>
				<PreferenceScreen
					android:key="@string/settings_display_padding_key"
					android:title="@string/settings_display_padding"
					android:summary="@string/settings_display_padding_summary">
					<com.jakewharton.utilities.NumberPreference
						android:key="@string/settings_display_padding_top_key"
						android:title="@string/settings_display_padding_top"
						android:summary="@string/settings_display_padding_top_summary"
						android:defaultValue="@integer/display_padding_top_default"
						app:min="@integer/display_padding_top_min"
						app:max="@integer/display_padding_top_max"/>
					<com.jakewharton.utilities.NumberPreference
						android:key="@string/settings_display_padding_bottom_key"
						android:title="@string/settings_display_padding_bottom"
						android:summary="@string/settings_display_padding_bottom_summary"
						android:defaultValue="@integer/display_padding_bottom_default"
						app:min="@integer/display_padding_bottom_min"
						app:max="@integer/display_padding_bottom_max"/>
					<com.jakewharton.utilities.NumberPreference
						android:key="@string/settings_display_padding_left_key"
						android:title="@string/settings_display_padding_left"
						android:summary="@string/settings_display_padding_left_summary"
						android:defaultValue="@integer/display_padding_left_default"
						app:min="@integer/display_padding_left_min"
						app:max="@integer/display_padding_left_max"/>
					<com.jakewharton.utilities.NumberPreference
						android:key="@string/settings_display_padding_right_key"
						android:title="@string/settings_display_padding_right"
						android:summary="@string/settings_display_padding_right_summary"
						android:defaultValue="@integer/display_padding_right_default"
						app:min="@integer/display_padding_right_min"
						app:max="@integer/display_padding_right_max"/>
				</PreferenceScreen>
			</PreferenceCategory>
			
			<PreferenceCategory
				android:key="@string/settings_reset_key"
				android:title="@string/settings_reset">
				<Preference
					android:key="@string/settings_display_reset_key"
					android:title="@string/settings_display_reset"
					android:summary="@string/settings_display_reset_summary"/>
			</PreferenceCategory>
		</PreferenceScreen>
		
		
		
		<!-- COLORS AND BACKGROUND -->
		<PreferenceScreen
			android:key="@string/settings_color_key"
			android:title="@string/settings_color"
			android:summary="@string/settings_color_summary">
			<PreferenceCategory
				android:title="@string/settings_color_background_header">
				<com.jakewharton.utilities.ColorPreference
					android:key="@string/settings_color_background_key"
					android:title="@string/settings_color_background"
					android:summary="@string/settings_color_background_summary"
					android:defaultValue="@integer/color_background_default"/>
				<Preference
					android:key="@string/settings_color_bgimage_key"
					android:title="@string/settings_color_bgimage"
					android:summary="@string/settings_color_bgimage_summary"/>
				<com.jakewharton.utilities.NumberPreference
					android:key="@string/settings_color_bgopacity_key"
					android:title="@string/settings_color_bgopacity"
					android:summary="@string/settings_color_bgopacity_summary"
					android:defaultValue="@integer/color_bgopacity_default"
					app:min="@integer/color_bgopacity_min"
					app:max="@integer/color_bgopacity_max"/>
				<Preference
					android:key="@string/settings_color_bgimageclear_key"
					android:title="@string/settings_color_bgimageclear"
					android:summary="@string/settings_color_bgimageclear_summary"/>
			</PreferenceCategory>
			
			<PreferenceCategory
				android:title="@string/settings_color_players_header">
				<com.jakewharton.utilities.ColorPreference
					android:key="@string/settings_color_player_key"
					android:title="@string/settings_color_player"
					android:summary="@string/settings_color_player_summary"
					android:defaultValue="@integer/color_player_default"/>
				<com.jakewharton.utilities.ColorPreference
					android:key="@string/settings_color_opponent_key"
					android:title="@string/settings_color_opponent"
					android:summary="@string/settings_color_opponent_summary"
					android:defaultValue="@integer/color_opponent_default"/>
			</PreferenceCategory>
			
			<PreferenceCategory
				android:key="@string/settings_reset_key"
				android:title="@string/settings_reset">
				<Preference
					android:key="@string/settings_color_reset_key"
					android:title="@string/settings_color_reset"
					android:summary="@string/settings_color_reset_summary"/>
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceCategory>
	
	
	
	<PreferenceCategory
		android:title="@string/information_header">
		<Preference
			android:key="@string/information_version_key"
			android:title="@string/information_version"
			android:summary="@string/version_name"
			style="?android:preferenceInformationStyle"/>
		<PreferenceScreen
			android:key="@string/about_key"
			android:title="@string/about"
			android:summary="@string/about_summary">
			<Preference
				android:key="@string/about_header_key"
				android:title="@string/title"
				android:summary="@string/about_header_summary"
				style="?android:preferenceInformationStyle"/>
			<PreferenceCategory
				android:title="@string/about_contents">
				<Preference
					android:key="@string/instructions_key"
					android:title="@string/instructions"
					android:summary="@string/instructions_summary"/>
				<Preference
					android:key="@string/changelog_key"
					android:title="@string/changelog"
					android:summary="@string/changelog_summary"/>
				<Preference
					android:key="@string/credits_key"
					android:title="@string/credits"
					android:summary="@string/credits_summary"/>
				<Preference
					android:key="@string/todo_key"
					android:title="@string/todo"
					android:summary="@string/todo_summary"/>
			</PreferenceCategory>
			<PreferenceCategory
				android:title="@string/about_aroundtheweb_header">
				<Preference
					android:key="@string/github_key"
					android:title="@string/github"
					android:summary="@string/github_summary"/>
				<Preference
					android:key="@string/xda_key"
					android:title="@string/xda"
					android:summary="@string/xda_summary"/>
			</PreferenceCategory>
		</PreferenceScreen>
		<PreferenceScreen
			android:key="@string/information_author_key"
			android:title="@string/information_author"
			android:summary="@string/author">
			<Preference
				android:key="@string/information_author_key"
				android:title="@string/author"
				style="?android:preferenceInformationStyle"/>
			<PreferenceCategory
				android:title="@string/information_contact">
				<com.jakewharton.utilities.IconPreference
					android:key="@string/information_contact_email_key"
					android:title="@string/information_contact_email"
					android:summary="@string/information_contact_email_summary"
					app:icon="@drawable/email"/>
				<com.jakewharton.utilities.IconPreference
					android:key="@string/information_contact_twitter_key"
					android:title="@string/information_contact_twitter"
					android:summary="@string/information_contact_twitter_summary"
					app:icon="@drawable/twitter"/>
				<com.jakewharton.utilities.IconPreference
					android:key="@string/information_contact_website_key"
					android:title="@string/information_contact_website"
					android:summary="@string/information_contact_website_summary"
					app:icon="@drawable/world"/>
			</PreferenceCategory>
			<PreferenceCategory
				android:title="@string/information_market">
				<Preference
					android:key="@string/information_market_view_key"
					android:title="@string/information_market_view"
					android:summary="@string/information_market_view_summary"/>
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>